--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/TheProfs/bitpaper-status#readme",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1"
   }
 }
